--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,8 @@
  * work well for content-centric websites.
  */
 
+ /* You can override the default Infima variables here. */
+ 
 :root {
   /* --ifm-color-primary: #f2633f;
   --ifm-color-primary-dark: #111827; */
