standardized way to show support, stability, and dependency info

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -79,6 +79,16 @@ a:hover {
   text-decoration: underline;
 }
 
+.alert {
+  border-radius: 3px !important;
+  border-width: 1px;
+  border-style: solid;
+}
+
+.alert--success {
+  
+}
+
 /* If we scope things with .intro we can attach to the tailwind styles on only the intro page */
 .tailwindcss .flex {
   display: flex;
